# interlog

./: .gitignore  20251007_113326_metadata.json  20251007_113941_events.csv  20251007_113941_metadata.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  analyzer.py  interlog.py  pyproject.toml  test_pynput.py  verify_install.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: METRICS.md
examples/: sample_events.csv  sample_events_intensity.csv  sample_events_summary.csv  sample_metadata.json
examples/p01/: events.csv  metadata.json
src/interlog/: __init__.py  __main__.py  analyzer.py  branding.py  cli.py  demo.py  doctor.py  heatmap.py  recorder.py  report.py  screen.py  security.py  serve.py  sync.py  text_analysis.py  viewer.py  viewer_template.html
tests/: conftest.py  test_analyzer.py  test_branding.py  test_cli.py  test_demo.py  test_doctor.py  test_heatmap.py  test_interlog.py  test_recorder.py  test_report.py  test_screen.py  test_security.py  test_serve.py  test_sync.py  test_text_analysis.py  test_viewer.py
tools/: capture_html_screenshots.py  capture_screenshots.py  capture_viewer_gif.py  mock_screen.py
