[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interlog"
version = "1.0.0"
description = "Lightweight, local interaction-logging tool for HCI research - captures mouse/keyboard events with timestamps and syncs them with a screen recording."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [{ name = "Blake Piper" }]
keywords = ["hci", "human-computer-interaction", "interaction-logging", "usability", "user-research", "input-logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = ["pynput>=1.7.6", "rich>=12.0"]

[project.optional-dependencies]
heatmap = ["matplotlib>=3.5", "numpy>=1.21", "Pillow>=9.0"]
dev = ["pytest>=7", "matplotlib>=3.5", "numpy>=1.21", "Pillow>=9.0"]

[project.urls]
Homepage = "https://github.com/blakepiper/interlog"
Issues = "https://github.com/blakepiper/interlog/issues"

[project.scripts]
interlog = "interlog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
interlog = ["viewer_template.html"]
