[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interlog"
version = "0.1.0"
description = "Lightweight, local interaction-logging tool for HCI research - captures mouse/keyboard events with timestamps and syncs them with a screen recording."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Blake Piper" }]
keywords = ["hci", "human-computer-interaction", "interaction-logging", "usability", "user-research", "input-logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]
dependencies = ["pynput>=1.7.6", "rich>=12.0", "jeepney>=0.8; sys_platform == 'linux'"]

[project.optional-dependencies]
heatmap = ["matplotlib>=3.5", "numpy>=1.21", "Pillow>=9.0"]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8", "interlog[heatmap]"]

[project.urls]
Homepage = "https://github.com/blakepiper/interlog"
Issues = "https://github.com/blakepiper/interlog/issues"
Changelog = "https://github.com/blakepiper/interlog/blob/main/CHANGELOG.md"

[project.scripts]
interlog = "interlog.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
interlog = ["viewer_template.html"]

[tool.ruff]
target-version = "py39"   # the 3.9 syntax floor referenced by [tool.mypy]

[tool.mypy]
# Run under the CI interpreter; the 3.9 syntax floor is enforced by ruff.
files = ["src"]
ignore_missing_imports = true   # pynput/jeepney/numpy stubs are optional
follow_imports = "silent"
warn_redundant_casts = true
